@@ -195,7 +195,7 @@ describe('startup defaults', function()
       os.remove('Xtest-foo')
     end)
 
-    clear { args = {}, args_rm = { '-i' }, env = env }
+    clear { args = {}, args_rm = { '-i', '--cmd' }, env = env }
     -- Default 'shadafile' is empty.
     -- This means use the default location. :help shada-file-name
     eq('', api.nvim_get_option_value('shadafile', {}))
@@ -203,16 +203,18 @@ describe('startup defaults', function()
     -- Handles viminfo/viminfofile as alias for shada/shadafile.
     eq('\n  shadafile=', eval('execute("set shadafile?")'))
     eq('\n  shadafile=', eval('execute("set viminfofile?")'))
-    eq("\n  shada=!,'100,<50,s10,h", eval('execute("set shada?")'))
-    eq("\n  shada=!,'100,<50,s10,h", eval('execute("set viminfo?")'))
+    eq("\n  shada=!,'100,<50,s10,h,r/tmp/,r/private/", eval('execute("set shada?")'))
+    eq("\n  shada=!,'100,<50,s10,h,r/tmp/,r/private/", eval('execute("set viminfo?")'))
 
+    -- Remove /tmp/ exclusion so test works when run in temp directories.
+    command("set shada=!,'100,<50,s10,h")
     -- Check that shada data (such as v:oldfiles) is saved/restored.
     command('edit Xtest-foo')
     command('write')
     local f = eval('fnamemodify(@%,":p")')
     assert(string.len(f) > 3)
     expect_exit(command, 'qall')
-    clear { args = {}, args_rm = { '-i' }, env = env }
+    clear { args = {}, args_rm = { '-i', '--cmd' }, env = env }
     eq({ f }, eval('v:oldfiles'))
   end)
 
